--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/elements": "^2.9.5",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/native-stack": "^7.10.1",
+    "axios": "^1.13.4",
     "expo": "~54.0.32",
     "expo-status-bar": "~3.0.9",
     "json-server": "^1.0.0-beta.5",
