--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.10.1",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
     "json-server": "^1.0.0-beta.5",
     "react": "19.1.0",
