imagе пицкер plus new api patch functionality

--- a/app.json
+++ b/app.json
@@ -29,7 +29,13 @@
     [
         "expo-location",
         {
-            "LocationAlwaysAndWhenIUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+            "locationAlwaysAndWhenIUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+    ],
+    [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
     ]
   ]
