--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/native-stack": "^7.10.1",
     "axios": "^1.13.4",
     "expo": "~54.0.32",
+    "expo-image-picker": "~17.0.10",
     "expo-location": "~19.0.8",
     "expo-sharing": "~14.0.8",
     "expo-status-bar": "~3.0.9",
